# FeatherCNN

./: CMakeLists.txt  README.md
build_scripts/: build_linux_avx.sh  build_linux_avx_test.sh  build_macos_avx.sh  build_macos_test.sh  build_ndk.bat  build_windows.bat  gen_ndk_mk.py
jni/: Android.mk  Application.mk  atof.c  stpcpy.c
src/: CMakeLists.txt  blob.cpp  blob.h  common.cpp  layer_factory.cpp  net.cpp  net.h
src/arm/: CMakeLists.txt  helper.h  sgemm.cpp
src/avx/: .sgemv.cpp.swp  .sgemv.h.swp  CMakeLists.txt  depthwise.cpp  generic_kernels.cpp  helper.cpp  helper.h  sgemm.cpp  sgemm.h  sgemv.cpp  sgemv.h  winograd_kernels_F63.cpp
src/general/: CMakeLists.txt
src/layers/: batchnorm_layer.cpp  conv_depthwise_layer.h  conv_im2col_layer.h  conv_layer.h  conv_winogradF63_layer.h  conv_winograd_layer.h  eltwise_layer.h  inner_product_layer.h  input_layer.h  lrn_layer.cpp  relu_layer.cpp  scale_layer.cpp  slice_layer.cpp  softmax_layer.cpp
src/wrapper/: CMakeLists.txt  dnn_api.cpp
test/: test.cpp
tools/: CMakeLists.txt  README.md  build.bat  feather_convert_caffe.cc
